--- a/twiti-app/package.json
+++ b/twiti-app/package.json
@@ -9,9 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@mysten/dapp-kit": "^1.0.1",
+    "@mysten/sui": "^2.3.1",
+    "@rainbow-me/rainbowkit": "^2.2.10",
+    "@tanstack/react-query": "^5.90.20",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.33.0",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0",
+    "viem": "^2.21.0",
+    "wagmi": "^2.14.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
